RESOLVED FIXED147015
WebsiteDataStore operations need to grab background assertions
https://bugs.webkit.org/show_bug.cgi?id=147015
Summary WebsiteDataStore operations need to grab background assertions
Anders Carlsson
Reported 2015-07-16 14:12:13 PDT
WebsiteDataStore operations need to grab background assertions
Attachments
Patch (5.21 KB, patch)
2015-07-16 14:12 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2015-07-16 14:12:43 PDT
mitz
Comment 2 2015-07-16 14:34:23 PDT
Comment on attachment 256924 [details] Patch We normally have the callers create the callbacks using the create function that takes an activity token. That’s why we added that parameter. Can you follow that established pattern in this case?
mitz
Comment 3 2015-07-16 14:39:25 PDT
(In reply to comment #2) > Comment on attachment 256924 [details] > Patch > > We normally have the callers create the callbacks using the create function > that takes an activity token. That’s why we added that parameter. Can you > follow that established pattern in this case? I forgot to mention that we normally do this using CallbackMap.
Anders Carlsson
Comment 4 2015-07-17 10:34:20 PDT
(In reply to comment #3) > (In reply to comment #2) > > Comment on attachment 256924 [details] > > Patch > > > > We normally have the callers create the callbacks using the create function > > that takes an activity token. That’s why we added that parameter. Can you > > follow that established pattern in this case? > > I forgot to mention that we normally do this using CallbackMap. I'm not going to make such an invasive change at this point.
Sam Weinig
Comment 5 2015-07-17 14:06:35 PDT
Comment on attachment 256924 [details] Patch Seems worth adding FIXMEs about using CallbackMap in the future.
Anders Carlsson
Comment 6 2015-07-20 10:09:28 PDT
Anders Carlsson
Comment 7 2015-07-20 10:10:49 PDT
(In reply to comment #5) > Comment on attachment 256924 [details] > Patch > > Seems worth adding FIXMEs about using CallbackMap in the future. The ability to do async messages with replies should be built into IPC::Connection, not layered on top of it.
Note You need to log in before you can comment on or make changes to this bug.