WebsiteDataStore operations need to grab background assertions https://bugs.webkit.org/show_bug.cgi?id=147015 rdar://problem/21799011

Reviewed by Sam Weinig.

* UIProcess/Network/NetworkProcessProxy.cpp:
(WebKit::NetworkProcessProxy::fetchWebsiteData):
(WebKit::NetworkProcessProxy::deleteWebsiteData):
(WebKit::NetworkProcessProxy::deleteWebsiteDataForOrigins):
* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::fetchWebsiteData):
(WebKit::WebProcessProxy::deleteWebsiteData):
(WebKit::WebProcessProxy::deleteWebsiteDataForOrigins):

Canonical link: https://commits.webkit.org/165151@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187023 268f45cc-cd09-0410-ab3c-d52691b4dbfc